# entdb-ocaml

./: .gitignore  AGENTS.md  dune-project  entdb.opam  flake.nix  test_validate_opaque.ml  test_validate_opaque2.ml  test_validate_opaque3.ml
.github/workflows/: ci.yml  release-smoke-macos.yml  release.yml
examples/: code_first_example.ml  dune  script_example.ml  source_example.ml  source_ppx_example.ml  source_validate_example.ml
lib/: api.ml  dune  type_id.ml
lib/core/: dune  entity_definition.ml  entity_id.ml  entity_trait.ml
lib/data/: api.ml  data.ml  dune  entity_data.ml  entity_id.ml  schema_source.ml
lib/data_api/: api.ml  dune
lib/entity/: api.ml  dune  entity_trait.ml
lib/entity_api/: api.ml  dune
lib/harness/: dune  harness.ml
lib/script/: dune  runner.ml
lib/sources/: dune  harness.ml  runner.ml
lib/sources_interface/: dune  entdb_sources.ml
lib/storage/: dune  sqlite.ml  sqlite_storage.ml  storage.ml  trait.ml
test/: dune  test_core.ml  test_entdb.ml  test_entity.ml  test_schema_import.ml  test_sources.ml  test_storage.ml
tools/gen_embed/: dune  gen_embed.ml
