(test
 (name test_core)
 (libraries entdb_data alcotest))

(test
 (name test_storage)
 (libraries entdb_data entdb_storage alcotest lwt lwt.unix yojson))

(test
 (name test_entity)
 (libraries entdb_data entdb_storage entdb_data_api entdb_entity_api alcotest lwt lwt.unix ppx_yojson_conv_lib)
 (preprocess (pps ppx_yojson_conv)))

(test
 (name test_sources)
 (modes byte)
 (libraries entdb_data entdb_entity entdb_sources alcotest yojson))

(test
 (name test_entdb)
 (libraries entdb_data entdb_storage entdb_data_api entdb_entity_api))
